# inventory

./: .env  README.md  docker-compose.override.yml  docker-compose.yml
backend/: Dockerfile  Invoice Template.xlsx  google_client_secret.json  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/alembic/: env.py
backend/app/api/: deps.py  main.py
backend/app/api/routes/: auth.py  customers.py  items.py  login.py  orders.py  private.py  products.py  users.py  utils.py
backend/app/core/: db.py  security.py
backend/app/crud/: user_crud.py
backend/app/models/: customer_models.py  order_models.py  product_models.py
backend/app/tests/: conftest.py
backend/app/tests/api/routes/: test_login.py  test_private.py  test_users.py
backend/app/tests/crud/: test_user.py
backend/app/tests/utils/: item.py  user.py
backend/app/utilities/: currency_utils.py
backend/scripts/: prestart.sh
backend/temp/: Invoice_2025010015.xlsx  Invoice_out.xlsx
frontend/: .env  Dockerfile  Dockerfile.playwright
frontend/src/: main.tsx  routeTree.gen.ts  utils.ts
frontend/src/client/: sdk.gen.ts  types.gen.ts
frontend/src/client/core/: OpenAPI.ts  request.ts
frontend/src/components/Common/: ActionsMenu.tsx  DeleteAlert.tsx  PageSizeSelector.tsx  SidebarItems.tsx
frontend/src/components/Customers/: AddCustomer.tsx  CustomerFormFields.tsx  EditCustomer.tsx
frontend/src/components/Orders/: AddOrder.tsx  EditOrder.tsx  OrderItemsField.tsx  REFACTORING_GUIDE.md  TotalPriceField.tsx  orderFormUtils.ts  orderTypes.ts
frontend/src/components/Products/: AddProduct.tsx  (+2 more)
frontend/src/hooks/: useAuth.ts  useCustomToast.ts
frontend/src/routes/: login.tsx
frontend/src/styles/: customers.styles.ts  dashboard.ts  orders.styles.ts
frontend/src/utils/: currencyUtils.ts  customerConstants.ts  customerFormUtils.ts  customerTypes.ts  orderConstants.ts  orderFormUtils.ts  productConstants.ts  productFormUtils.ts  productTypes.ts
nginx-proxy/: docker-compose.yml  nginx.conf  nginx.conf.bak
(+8 files in other folders)
